Star create Event for EventBundle.

--- a/src/Corvus/DashboardBundle/Resources/views/layout.html.twig
+++ b/src/Corvus/DashboardBundle/Resources/views/layout.html.twig
@@ -22,9 +22,10 @@
                 {% endfor %}
             {% endif %}
             </div>
+            <div class="col-md-8 col-md-offset-2" >
             {% block body %}
             {% endblock body %}
-
+            </div>
         </div>
     </body>
 </html>
