--- a/src/Corvus/UserBundle/Resources/views/ChangePassword/changePassword_content.html.twig
+++ b/src/Corvus/UserBundle/Resources/views/ChangePassword/changePassword_content.html.twig
@@ -1,8 +1,11 @@
 {% trans_default_domain 'FOSUserBundle' %}
-
+<div class="container" style="padding: 5px;">
+    <a class="btn btn-default" href="{{ path('fos_user_profile_show') }}">Your profile</a>
+    <a class="btn btn-default" href="{{ path('dashboard') }}">Dashboard</a>
+</div>
 <form action="{{ path('fos_user_change_password') }}" {{ form_enctype(form) }} method="POST" class="fos_user_change_password">
     {{ form_widget(form) }}
     <div>
-        <input type="submit" value="{{ 'change_password.submit'|trans }}" />
+        <input class="btn btn-default" type="submit" value="{{ 'change_password.submit'|trans }}" />
     </div>
 </form>
