--- a/src/Corvus/DashboardBundle/Resources/views/Default/index.html.twig
+++ b/src/Corvus/DashboardBundle/Resources/views/Default/index.html.twig
@@ -2,24 +2,21 @@
 {% import "DashboardBundle::Default/macros.html.twig" as buttons %}
 
 {% block body %}
-    <div class="container">
-        <div class="col-md-6">
-            <h2>This is your dashboard</h2>
+    <div class="container-fluid">
+        <div class="col-md-5">
+            <h3>This is your dashboard</h3>
         </div>
-        <div class="col-md-6">
-            {% block fos_user_content %}
-            <a class="btn btn-primary" href="{{ path('fos_user_security_logout') }}">Logout</a>
-            <a class="btn btn-primary" href="{{ path('fos_user_profile_show') }}">Your Profile</a>
-            {% endblock fos_user_content %}
-
-            <a id="addEvent" href="#path('add_event')" class="btn btn-primary">Add new event</a>
-
+        <div class="col-md-7" style="padding-top: 10px">
+            <b>{{ app.user.username }}</b>
+            <a class="btn btn-default" href="{{ path('fos_user_security_logout') }}">Logout</a>
+            <a class="btn btn-default" href="{{ path('fos_user_profile_show') }}">Your Profile</a>
+            <a id="addEvent" href="#path('add_event')" class="btn btn-default">Add new event</a>
         </div>
     </div>
 
-    <div class="container">
+    <div class="container-fluid">
     {% for event in events %}
-            <div style="outline: 1px solid lightgray;">
+            <div class="container-fluid" style="outline: 1px solid lightgray;">
                 <div class="row">
                     <div class="col-lg-12">
                         <h3>{{ event.title }}</h3>
@@ -27,13 +24,13 @@
                 </div>
                 {% if user.id == event.host.id %}
                     <div class="row">
-                        <div class="col-md-1"></div>
+
                         <div class="col-md-7">
                         {% if event.status == 1 %}
                             <p>Ends in: {{ event.getTimeLeft.format('%d days %H hours %i minutes') }}</p>
                             <p>Users who already ordered: {{ event.getOrdersCount }} / {{ event.users.count + event.emails.count}}</p>
                             </div>
-                            <div class="col-md-4">
+                            <div class="col-md-5">
                                 {{ buttons.pick(event.id) }}
                                 {{ buttons.edit(event.id) }}
                                 {{ buttons.suspend(event.id) }}
@@ -43,7 +40,7 @@
                             <p>Ordering ended - time to order food</p>
                             <p>Users who already ordered: {{ event.getOrdersCount }} / {{ event.users.count + event.emails.count}}</p>
                             </div>
-                            <div class="col-md-4">
+                            <div class="col-md-5">
                                 {{ buttons.edit(event.id) }}
                                 {{ buttons.place(event.id) }}
                                 {{ buttons.cancel(event.id) }}
@@ -52,7 +49,7 @@
                             <p>Ordered. Waiting</p>
                             <p>Unpaid amount {{ event.getDebtLeft }}</p>
                             </div>
-                            <div class="col-md-4">
+                            <div class="col-md-5">
                                 {{ buttons.arrived(event.id) }}
                                 {{ buttons.payments(event.id) }}
                             </div>
@@ -60,48 +57,47 @@
                             <p>Arrived</p>
                             <p>Unpaid amount {{ event.getDebtLeft }}</p>
                             </div>
-                            <div class="col-md-4">
+                            <div class="col-md-5">
                                 {{ buttons.payments(event.id) }}
                             </div>
                         {% else %}
                             <p>Finished</p>
                             </div>
-                            <div class="col-md-4">
+                            <div class="col-md-5">
                                 {{ buttons.review(event.id) }}
                             </div>
                         {% endif %}
                 {% else %}
                     <div class="row">
-                        <div class="col-md-1"></div>
                         <div class="col-md-7">
                         {% if event.status == 1 %}
                             <p>Ends in: {{ event.getTimeLeft.format('%d days %H hours %i minutes') }}</p>
                             </div>
-                            <div class="col-md-4">
+                            <div class="col-md-5">
                                 {{ buttons.pick(event.id) }}
                             </div>
                         {% elseif event.status == 2 %}
                             <p>Ordering ended</p>
                             </div>
-                            <div class="col-md-4">
+                            <div class="col-md-5">
                                 {{ buttons.review(event.id) }}
                             </div>
                         {% elseif event.status == 3 %}
                             <p>Ordered. Waiting</p>
-                            <div class="col-md-4">
+                            <div class="col-md-5">
                                 {{ buttons.review(event.id) }}
                             </div>
                             </div>
                         {% elseif event.status == 4 %}
                             <p>Arrived</p>
                             </div>
-                            <div class="col-md-4">
+                            <div class="col-md-5">
                                 {{ buttons.review(event.id) }}
                             </div>
                         {% else %}
                             <p>Finished</p>
                             </div>
-                            <div class="col-md-4">
+                            <div class="col-md-5">
                                 {{ buttons.review(event.id) }}
                             </div>
                         {% endif %}
