--- a/src/Corvus/UserBundle/Resources/views/Profile/edit_content.html.twig
+++ b/src/Corvus/UserBundle/Resources/views/Profile/edit_content.html.twig
@@ -1,8 +1,13 @@
 {% trans_default_domain 'FOSUserBundle' %}
 
+<div class="container" style="padding: 5px;">
+    <a class="btn btn-default" href="{{ path('fos_user_profile_show') }}">Your profile</a>
+    <a class="btn btn-default" href="{{ path('dashboard') }}">Dashboard</a>
+</div>
+
 <form action="{{ path('fos_user_profile_edit') }}" {{ form_enctype(form) }} method="POST" class="fos_user_profile_edit">
     {{ form_widget(form) }}
     <div>
-        <input type="submit" value="{{ 'profile.edit.submit'|trans }}" />
+        <input class="btn btn-default" type="submit" value="{{ 'profile.edit.submit'|trans }}" />
     </div>
 </form>
