--- a/src/Corvus/EventBundle/Resources/views/Default/review.html.twig
+++ b/src/Corvus/EventBundle/Resources/views/Default/review.html.twig
@@ -1,15 +1,31 @@
-{% extends "EventBundle::layout.html.twig" %}
+{% extends "::base.html.twig" %}
 
-{% block event_content %}
-    <div class = "col-md-12">
-    <h3>{{ event.title }}</h3>
-    </div>
-    </div>
-    {% for user in event.users %}
-        <div class = "row">
-            <div class="col-md-12">
-                <h4>{{ user.getUsername }}</h4>
+{% block stylesheets %}
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css" rel="stylesheet" type="text/css"/>
+{% endblock stylesheets %}
+
+{% block body %}
+    <div class="container">
+        <div class="row">
+            <div class = "col-md-12">
+            <h3>{{ event.title }}</h3>
             </div>
+            {% for user in users %}
+                {% if (user.getOrdersForEvent(event).count > 0) %}
+                    <div class = "row">
+                        <div class="col-md-12">
+                            <h4>{{ user.getUsername }}</h4>
+                        </div>
+                    </div>
+                    {% for order in user.getOrdersForEvent(event) %}
+                        <div class="row">
+                            <div class="col-md-offset-2 col-md-8">{% if order.isRemoved %}<del>{% endif %}{{ order.dish.name }}{% if order.isRemoved %}</del>{% endif %}</div>
+                            <div class="col-md-2">{% if order.isRemoved %}<del>{% endif %}{{ order.quantity }}{% if order.isRemoved %}</del>{% endif %}</div>
+                        </div>
+                    {% endfor %}
+                {% endif %}
+            {% endfor %}
         </div>
-    {% endfor %}
-{% endblock event_content %}
+    </div>
+{% endblock body %}
