Fix to Dashboard. Add authentication, and don't calculate removed food in order totals

--- a/src/Corvus/DashboardBundle/Resources/views/Default/macros.html.twig
+++ b/src/Corvus/DashboardBundle/Resources/views/Default/macros.html.twig
@@ -3,7 +3,7 @@
 {% endmacro %}
 
 {% macro review(eid) %}
-    <a href="#path('review_order', {'id': eid})" class="btn btn-primary">Review order</a>
+    <a href="#path('review', {'id': eid})" class="btn btn-primary">Review order</a>
 {% endmacro %}
 
 {% macro payments(eid) %}
