--- a/src/Corvus/DashboardBundle/Resources/views/Default/index.html.twig
+++ b/src/Corvus/DashboardBundle/Resources/views/Default/index.html.twig
@@ -62,6 +62,7 @@
                             </div>
                             <div class="col-md-4">
                                 {{ buttons.payments(event.id) }}
+                                {{ buttons.review(event.id) }}
                             </div>
                         {% else %}
                             <p>Finished</p>
