--- a/src/Corvus/EventBundle/Resources/views/Default/payments.html.twig
+++ b/src/Corvus/EventBundle/Resources/views/Default/payments.html.twig
@@ -12,8 +12,7 @@
                         Debt: {{ event.getUserDebt(guest) }}
                     </td>
                     <td>
-                        {{ form_row(form.user) }}
-                        {{ form_row(form.paid) }}
+                        Paid amount: {{ form_widget(form.payment[guest.id]) }}
                     </td>
                 </tr>
             {% endfor %}
