--- a/src/Corvus/EventBundle/Resources/views/Default/payments.html.twig
+++ b/src/Corvus/EventBundle/Resources/views/Default/payments.html.twig
@@ -19,6 +19,7 @@
         </table>
         {{ form_widget(form.save, { 'attr': {'class': 'btn btn-default'} }) }}
         <a href="{{ path('dashboard') }}" class="btn btn-default" role="button">Cancel</a>
+        <a href="#" class="btn btn-default" role="button">Send reminder for unpaid guests</a>
         {{ form_end(form) }}
     </div>
 {% endblock event_content %}
