Enable buttons in dashboard. Fix redirect after order plavement

--- a/src/Corvus/DashboardBundle/Resources/views/Default/index.html.twig
+++ b/src/Corvus/DashboardBundle/Resources/views/Default/index.html.twig
@@ -12,7 +12,7 @@
             <a class="btn btn-primary" href="{{ path('fos_user_profile_show') }}">Your Profile</a>
             {% endblock fos_user_content %}
 
-            <a id="addEvent" href="#path('add_event')" class="btn btn-primary">Add new event</a>
+            <a id="addEvent" href="{{ path('corvus_event_default_createevent') }}" class="btn btn-primary">Add new event</a>
 
         </div>
     </div>
