Create "remin to pay debts" button. Add some flah messages. they have name - notice. Add event listeners where neccesery: then editing event - mail is sent to added users; then event is suspended; then event is canceled; then event is created; then food is ordered; then food is delivered;
NEED TO ADD listener, then event time is out.

--- a/src/Corvus/DashboardBundle/Resources/views/Default/macros.html.twig
+++ b/src/Corvus/DashboardBundle/Resources/views/Default/macros.html.twig
@@ -15,7 +15,7 @@
 {% endmacro %}
 
 {% macro suspend(eid) %}
-    <a href="{{ path('suspend', {'eventId': eid}) }}" class="btn btn-primary">Place order</a>
+    <a href="{{ path('suspend', {'eventId': eid}) }}" class="btn btn-primary">Suspend</a>
 {% endmacro %}
 
 {% macro place(eid) %}
@@ -23,9 +23,9 @@
 {% endmacro %}
 
 {% macro cancel(eid) %}
-    <a href="#path('cancel_event', {'id': eid})" class="btn btn-primary">Cancel order</a>
+    <a href="{{ path('cancel_event', {'id': eid}) }}" class="btn btn-primary">Cancel event</a>
 {% endmacro %}
 
 {% macro arrived(eid) %}
-    <a href="#path('order_arrived', {'id': eid})" class="btn btn-primary">Order arrived</a>
+    <a href="{{ path('order_arrived', {'id': eid}) }}" class="btn btn-primary">Order arrived</a>
 {% endmacro %}
