--- a/src/Corvus/DashboardBundle/Resources/views/layout.html.twig
+++ b/src/Corvus/DashboardBundle/Resources/views/layout.html.twig
@@ -23,6 +23,13 @@
             {% endif %}
             </div>
             <div class="col-md-8 col-md-offset-2" >
+
+                {% for flash_message in app.session.flashbag.get('notice') %}
+                    <div class="flash-notice">
+                        {{ flash_message }}
+                    </div>
+                {% endfor %}
+
             {% block body %}
             {% endblock body %}
             </div>
