edit email templates.

--- a/src/Corvus/EventBundle/Resources/views/Default/pick.html.twig
+++ b/src/Corvus/EventBundle/Resources/views/Default/pick.html.twig
@@ -2,8 +2,9 @@
 
 {% block event_content %}
 
-    Event name: {{ event_name }}!<br>
-    dealer {{ dealer }}<br>
+    <h4>Dealer: {{ dealer }}</h4>
+    <h4>Event name: {{ event_name }}!</h4>
+
     <div class="col-md-8" style="outline: 1px solid lightgray;" >
         <h3>Dish'es</h3>
         <div>
