--- a/src/Corvus/EventBundle/Resources/views/Emails/eventCancel.html.twig
+++ b/src/Corvus/EventBundle/Resources/views/Emails/eventCancel.html.twig
@@ -1,5 +1,4 @@
-{# app/Resources/views/Emails/registration.html.twig #}
-<h3>You have been choosen</h3>
+<h3>Event "{{ event.title }}" has been canceled</h3><br>
 
 Hello, {{ email }}<br>
 
