--- a/src/Corvus/EventBundle/Resources/views/Emails/inviteguest.html.twig
+++ b/src/Corvus/EventBundle/Resources/views/Emails/inviteguest.html.twig
@@ -1,15 +1,14 @@
 {# app/Resources/views/Emails/registration.html.twig #}
-<h3>You have been choosen</h3>
+<h3>You have been choosen</h3><br><br>
 
-Hello, {{ email }}
+Hello, {{ email }}<br><br>
 
-You have been invited by {{ event.host.username }} to participate in {{ event.title }} event.
+You have been invited by {{ event.host.username }} to participate in {{ event.title }} event.<br><br>
 
-Go to website, pick your food and save a lot of time.
+Go to website, pick your food and save a lot of time.<br><br>
 
-{# example, assuming you have a route named "login" #}
-To register, go to: <a href="{{ url('login') }}">Register</a>.
+To register, go to: <a href="{{ url('login') }}">Register</a>.<br><br>
 
-Thanks!
+Thanks!<br>
 
 CorvusFood Group.
