Change sending email logic. When food is ordered, email is sent only to those who ordered anr in email user can see what was ordered to him and that order was deleted.

--- a/src/Corvus/EventBundle/Resources/views/Emails/foodOrdered/foodOrdered.html.twig
+++ b/src/Corvus/EventBundle/Resources/views/Emails/foodOrdered/foodOrdered.html.twig
@@ -3,7 +3,14 @@
 
 Hello, {{ name }}<br><br>
 
-We want to announce, that food for {{ event.title }} has been ordered<br>
+We want to announce, that food for {{ event.title }} has been ordered<br><br>
+Your order:<br>
+<ul>
+    {% for order in orders %}
+        <li> {{ order.getDish.getName }}</li>
+    {% endfor %}
+</ul><br><br>
+
 Approximate devlivery time: {{ delivery_time |date('Y-m-d H-i')}}<br>
 Enjoy your meal :)<br><br>
 
