--- a/src/Corvus/EventBundle/Resources/views/Emails/foodOrdered/allOrdersDelete.html.twig
+++ b/src/Corvus/EventBundle/Resources/views/Emails/foodOrdered/allOrdersDelete.html.twig
@@ -7,11 +7,11 @@ We want to announce, that food for {{ event.title }} has been ordered<br>
 But your order was deleted:<br>
 <ul>
     {% for order in removed_orders %}
-        <li>{{ order.getDish.getName }}</li>
+        <li>{{ order.getDish.getName }}, {{ order.getQuantity }} piece's</li>
     {% endfor %}
-</ul><br><br>
+</ul><br>
 
-Approximate devlivery time: {{ delivery_time |date('Y-m-d H-i')}}<br>
+Approximate devlivery time: {{ delivery_time |date('Y-m-d H-i')}}<br><br>
 
 
 Massive Food ordering system: <a href="{{ url('login') }}">CorvusFood</a>.<br><br>
