tide up email templates.

--- a/src/Corvus/EventBundle/Resources/views/Emails/eventCancel.html.twig
+++ b/src/Corvus/EventBundle/Resources/views/Emails/eventCancel.html.twig
@@ -2,7 +2,7 @@
 
 Hello, {{ email }}<br>
 
-Event {{ event.title }} has been canceled.<br><br>
+Event {{ event.title }} has been canceled by {{ event.gethost.getusername }}.<br><br>
 
 
 Vizit our page: <a href="{{ url('login') }}">CorvusFood</a>.<br><br>
