--- a/src/Corvus/EventBundle/Resources/views/Emails/foodOrdered/someOrdersDeleted.html.twig
+++ b/src/Corvus/EventBundle/Resources/views/Emails/foodOrdered/someOrdersDeleted.html.twig
@@ -12,7 +12,7 @@ But some of your orders were deleted:<br><br>
 {% endfor %}
 </ul><br>
 
-Food that was ordered for you:<br><br>
+Food that will be delivered for you:<br><br>
 
 <ul>
     {% for order in orders %}
