--- a/src/Corvus/EventBundle/Resources/views/Emails/inviteuser.html.twig
+++ b/src/Corvus/EventBundle/Resources/views/Emails/inviteuser.html.twig
@@ -1,5 +1,5 @@
 {# app/Resources/views/Emails/registration.html.twig #}
-<h3>You have been choosen</h3><br><br>
+<h3>Invitation to order food</h3><br><br>
 
 Hello, {{ name }}<br><br>
 
