--- a/src/Corvus/EventBundle/Resources/views/Emails/remindUserDebt.html.twig
+++ b/src/Corvus/EventBundle/Resources/views/Emails/remindUserDebt.html.twig
@@ -2,7 +2,7 @@
 
 Hello, {{ user.username }}.<br><br>
 
-User {{ event.host.username }} wants to remind you, that you have unpaid debts.<br><br>
+User {{ event.host.username }} want to remind you, that you have unpaid debts.<br><br>
 
 You owe him: {{ debt }}<br>
 You were participating in {{ event.title }}<br>
