--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -6,22 +6,58 @@
         <title>{% block title %}Welcome!{% endblock %}</title>
         <link rel="icon" type="image/x-icon" href="{{ asset('favicon.ico') }}" />
         <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css" rel="stylesheet" type="text/css"/>
+        <link href="{{asset('bundles/event/plugins/css/bootstrap-datetimepicker.min.css')}}" type="text/css" rel="stylesheet">
         {% block stylesheets %}{% endblock %}
 
     </head>
     <body>
-    <div class="container header">
-        <div class="col-md-8 col-md-offset-2">
-            <h1 class="text-center">Massive food ordering</h1>
-        </div>
-    </div>
+    {% block header %}
+        <nav class="navbar navbar-inverse navbar-static-top" role="navigation">
+            <div class="container">
+                <!-- Brand and toggle get grouped for better mobile display -->
+                <div class="navbar-header">
+                    {% if app.user %}
+                    <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+                        <span class="sr-only">Toggle navigation</span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                    </button>
+                    {% endif %}
+                    <a class="navbar-brand" href="{{ path('dashboard') }}">Corvus</a>
+                </div>
+                <!-- Collect the nav links, forms, and other content for toggling -->
+                <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+                    <ul class="nav navbar-nav pull-right">
+                        {% if app.user %}
+                            {% block fos_user_content %}
+                                <li>
+                                    <p class="navbar-text">Logged in as <strong>{{app.user.username }}</strong></p>
+                                </li>
+                                <li>
+                                    <a href="{{ path('fos_user_profile_show') }}">Your Profile</a>
+                                </li>
+                                <li>
+                                    <a href="{{ path('fos_user_security_logout') }}">Logout</a>
+                                </li>
+                            {% endblock %}
+                        {% endif %}
+                    </ul>
+                </div>
+                <!-- /.navbar-collapse -->
+            </div>
+            <!-- /.container -->
+        </nav>
+    {% endblock %}
         <div class="container main">
-            <div class="col-md-8 col-md-offset-2">
+            <div class="col-md-10 col-md-offset-1">
                 {% block body %}{% endblock %}
             </div>
         </div>
     <script src="https://code.jquery.com/jquery-2.1.4.min.js" type="text/javascript"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" type="text/javascript"></script>
+    <script src="{{asset('bundles/event/plugins/js/moment.min.js')}}" type="text/javascript"></script>
+    <script src="{{asset('bundles/event/plugins/js/bootstrap-datetimepicker.min.js')}}" type="text/javascript"></script>
         {% block javascripts %}
         {% endblock %}
     </body>
