--- a/src/Corvus/DashboardBundle/Resources/views/Default/index.html.twig
+++ b/src/Corvus/DashboardBundle/Resources/views/Default/index.html.twig
@@ -1,118 +1,151 @@
-{% extends "DashboardBundle::layout.html.twig" %}
+{% extends '::base.html.twig'  %}
 {% import "DashboardBundle::Default/macros.html.twig" as buttons %}
-
-{% block body %}
-    <div class="container">
-        <div class="col-md-6">
-            <h2>This is your dashboard</h2>
+{% block stylesheets %}
+    <link href="{{asset('bundles/dashboard/css/dashboard.css')}}" type="text/css" rel="stylesheet">
+{% endblock stylesheets %}
+{% block header %}
+    {{ parent() }}
+{% endblock header %}
+    {% block body %}
+        <div class="event_list_head col-md-offset-1 col-md-10">
+            <h1 class="list-inline">Events:</h1>
+            <a id="addEvent" href="{{ path('corvus_event_default_createevent') }}" class="btn btn-primary pull-right">Add new event</a>
         </div>
-        <div class="col-md-6">
-            {% block fos_user_content %}
-            <a class="btn btn-primary" href="{{ path('fos_user_security_logout') }}">Logout</a>
-            <a class="btn btn-primary" href="{{ path('fos_user_profile_show') }}">Your Profile</a>
-            {% endblock fos_user_content %}
-
-            <a id="addEvent" href="{{ path('corvus_event_default_createevent') }}" class="btn btn-primary">Add new event</a>
-
-        </div>
-    </div>
-
-    <div class="container">
+        <div class="event_list_wrapper col-md-offset-1 col-md-10">
     {% for event in events %}
-            <div style="outline: 1px solid lightgray;">
-                <div class="row">
-                    <div class="col-lg-12">
+            <div class="event_item row">
+                    <span class="hosted_by">Host: <strong>{{ event.host.username }}</strong></span>
+                    <div class="col-md-7 ">
                         <h3>{{ event.title }}</h3>
-                    </div>
-                </div>
                 {% if user.id == event.host.id %}
-                    <div class="row">
-                        <div class="col-md-1"></div>
-                        <div class="col-md-7">
+                        <div class="col-md-12 ">
                         {% if event.status == 1 %}
                             <p>Ends in: {{ event.getTimeLeft.format('%d days %H hours %i minutes') }}</p>
                             <p>Users who already ordered: {{ event.getOrdersCount }} / {{ event.users.count + event.emails.count}}</p>
                             </div>
-                            <div class="col-md-4">
-                                {{ buttons.pick(event.id) }}
-                                {{ buttons.edit(event.id) }}
-                                {{ buttons.suspend(event.id) }}
-                                {{ buttons.cancel(event.id) }}
+                            </div>
+                            <div class="col-md-5 buttons">
+                                <div class="col-md-6">
+                                    {{ buttons.pick(event.id, 'btn btn-default') }}
+                                </div>
+                                <div class="dropdown col-md-6">
+                                    <button class="btn btn-default dropdown-toggle col-md-12" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
+                                        More
+                                        <span class="caret"></span>
+                                    </button>
+                                    <ul class="dropdown-menu" aria-labelledby="dropdownMenu1">
+                                        <li>{{ buttons.edit(event.id) }}</li>
+                                        <li>{{ buttons.suspend(event.id) }}</li>
+                                        <li>{{ buttons.cancel(event.id) }}</li>
+                                    </ul>
+                                </div>
                             </div>
                         {% elseif event.status == 2 %}
                             <p>Ordering ended - time to order food</p>
                             <p>Users who already ordered: {{ event.getOrdersCount }} / {{ event.users.count + event.emails.count}}</p>
                             </div>
-                            <div class="col-md-4">
-                                {{ buttons.edit(event.id) }}
-                                {{ buttons.place(event.id) }}
-                                {{ buttons.cancel(event.id) }}
+                            </div>
+                            <div class="col-md-5 buttons">
+                                <div class="col-md-6">
+                                    {{ buttons.place(event.id, 'btn btn-default') }}
+                                </div>
+                                <div class="dropdown col-md-6">
+                                    <button class="btn btn-default dropdown-toggle col-md-12" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
+                                        More
+                                        <span class="caret"></span>
+                                    </button>
+                                    <ul class="dropdown-menu" aria-labelledby="dropdownMenu1">
+                                        <li>{{ buttons.edit(event.id) }}</li>
+                                        <li>{{ buttons.cancel(event.id) }}</li>
+                                    </ul>
+                                </div>
                             </div>
                         {% elseif event.status == 3 %}
                             <p>Ordered. Waiting</p>
                             <p>Unpaid amount {{ event.getDebtLeft }}</p>
                             </div>
-                            <div class="col-md-4">
-                                {{ buttons.arrived(event.id) }}
-                                {{ buttons.review(event.id) }}
-                                {{ buttons.payments(event.id) }}
+                            </div>
+                            <div class="col-md-5 buttons">
+                                <div class="col-md-6">
+                                    {{ buttons.arrived(event.id, 'btn btn-default') }}
+                                </div>
+                                <div class="dropdown col-md-6 pull-right">
+                                    <button class="btn btn-default dropdown-toggle col-md-12" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
+                                        More
+                                        <span class="caret"></span>
+                                    </button>
+                                    <ul class="dropdown-menu" aria-labelledby="dropdownMenu1">
+                                        <li>{{ buttons.review(event.id) }}</li>
+                                        <li>{{ buttons.payments(event.id) }}</li>
+                                    </ul>
+                                </div>
                             </div>
                         {% elseif event.status == 4 %}
                             <p>Arrived</p>
                             <p>Unpaid amount {{ event.getDebtLeft }}</p>
                             </div>
-                            <div class="col-md-4">
-                                {{ buttons.payments(event.id) }}
-                                {{ buttons.review(event.id) }}
+                            </div>
+                            <div class="col-md-5 buttons">
+                                <div class="col-md-6">
+                                    {{ buttons.payments(event.id, 'btn btn-default') }}
+                                </div>
+                                <div class="col-md-6">
+                                    {{ buttons.review(event.id, 'btn btn-default') }}
+                                </div>
                             </div>
                         {% else %}
                             <p>Finished</p>
                             </div>
-                            <div class="col-md-4">
-                                {{ buttons.review(event.id) }}
+                            </div>
+                            <div class="col-md-5 buttons">
+                                {{ buttons.review(event.id, 'btn btn-default') }}
                             </div>
                         {% endif %}
                 {% else %}
-                    <div class="row">
-                        <div class="col-md-1"></div>
-                        <div class="col-md-7">
+                        <div class="col-md-12">
                         {% if event.status == 1 %}
                             <p>Ends in: {{ event.getTimeLeft.format('%d days %H hours %i minutes') }}</p>
                             </div>
-                            <div class="col-md-4">
-                                {{ buttons.pick(event.id) }}
+                            </div>
+                            <div class="col-md-5 buttons">
+                                <div class="col-md-6 col-md-offset-6">{{ buttons.pick(event.id, 'btn btn-default') }}</div>
                             </div>
                         {% elseif event.status == 2 %}
                             <p>Ordering ended</p>
                             </div>
-                            <div class="col-md-4">
-                                {{ buttons.review(event.id) }}
+                            </div>
+                            <div class="col-md-5 buttons">
+                                <div class="col-md-6 col-md-offset-6">{{ buttons.review(event.id, 'btn btn-default') }}</div>
                             </div>
                         {% elseif event.status == 3 %}
                             <p>Ordered. Waiting</p>
-                            <div class="col-md-4">
-                                {{ buttons.review(event.id) }}
+                            </div>
+                            </div>
+                            <div class="col-md-5 buttons">
+                                <div class="col-md-6 col-md-offset-6">{{ buttons.review(event.id, 'btn btn-default') }}</div>
                             </div>
                             </div>
                         {% elseif event.status == 4 %}
                             <p>Arrived</p>
                             </div>
-                            <div class="col-md-4">
-                                {{ buttons.review(event.id) }}
+                            </div>
+                            <div class="col-md-5 buttons">
+                                <div class="col-md-6 col-md-offset-6">{{ buttons.review(event.id, 'btn btn-default') }}</div>
                             </div>
                         {% else %}
                             <p>Finished</p>
                             </div>
-                            <div class="col-md-4">
-                                {{ buttons.review(event.id) }}
+                            </div>
+                            <div class="col-md-5 buttons">
+                                <div class="col-md-6 col-md-offset6">{{ buttons.review(event.id, 'btn btn-default') }}</div>
                             </div>
                         {% endif %}
-                    </div>
-                {% endif %}
-            </div>
 
+                {% endif %}
         </div>
     {% endfor %}
-    </div>
+        </div>
 
+        </div>
+</div>
 {% endblock body %}
