--- a/src/Corvus/DashboardBundle/Resources/views/Default/macros.html.twig
+++ b/src/Corvus/DashboardBundle/Resources/views/Default/macros.html.twig
@@ -1,31 +1,31 @@
-{% macro pick(eid) %}
-    <a href="{{ path('select_food', {'id': eid}) }}" class="btn btn-primary">Pick food</a>
+{% macro pick(eid, class) %}
+    <a href="{{ path('select_food', {'id': eid}) }}" class="  event_action  {{class}}" >Pick food</a>
 {% endmacro %}
 
-{% macro review(eid) %}
-    <a href="{{ path('review', {'id': eid}) }}" class="btn btn-primary">Review order</a>
+{% macro review(eid, class) %}
+    <a href="{{ path('review', {'id': eid}) }}" class="  event_action  {{class}}" >Review order</a>
 {% endmacro %}
 
-{% macro payments(eid) %}
-    <a href="{{ path('payments', {'id': eid}) }}" class="btn btn-primary">Payments</a>
+{% macro payments(eid, class) %}
+    <a href="{{ path('payments', {'id': eid}) }}" class="  event_action  {{class}}" >Payments</a>
 {% endmacro %}
 
-{% macro edit(eid) %}
-    <a href="{{ path('corvus_event_default_editevent', {'id': eid}) }}" class="btn btn-primary">Edit event</a>
+{% macro edit(eid, class) %}
+    <a href="{{ path('corvus_event_default_editevent', {'id': eid}) }}" class="  event_action  {{class}}" >Edit event</a>
 {% endmacro %}
 
-{% macro suspend(eid) %}
-    <a href="{{ path('suspend', {'eventId': eid}) }}" class="btn btn-primary">Place order</a>
+{% macro suspend(eid, class) %}
+    <a href="{{ path('suspend', {'eventId': eid}) }}" class="  event_action  {{class}}" >Place order</a>
 {% endmacro %}
 
-{% macro place(eid) %}
-    <a href="{{ path('order_food', {'id': eid}) }}" class="btn btn-primary">Place order</a>
+{% macro place(eid, class) %}
+    <a href="{{ path('order_food', {'id': eid}) }}" class="  event_action  {{class}}" >Place order</a>
 {% endmacro %}
 
-{% macro cancel(eid) %}
-    <a href="#path('cancel_event', {'id': eid})" class="btn btn-primary">Cancel order</a>
+{% macro cancel(eid, class) %}
+    <a href="#path('cancel_event', {'id': eid})" class="  event_action  {{class}}" >Cancel order</a>
 {% endmacro %}
 
-{% macro arrived(eid) %}
-    <a href="#path('order_arrived', {'id': eid})" class="btn btn-primary">Order arrived</a>
+{% macro arrived(eid, class) %}
+    <a href="#path('order_arrived', {'id': eid})" class="  event_action  {{class}}" >Order arrived</a>
 {% endmacro %}
