--- a/src/Corvus/EventBundle/Resources/views/Default/order.html.twig
+++ b/src/Corvus/EventBundle/Resources/views/Default/order.html.twig
@@ -1,7 +1,14 @@
-{% extends "EventBundle::layout.html.twig" %}
-
-{% block event_content %}
-    <div class="col-md-12" style="outline: 1px solid lightgray;" >
+{% extends '::base.html.twig'  %}
+{% block stylesheets %}
+    <link href="{{asset('bundles/event/css/order.css')}}" type="text/css" rel="stylesheet">
+{% endblock stylesheets %}
+{% block body %}
+    <div class="col-md-offset-1 col-md-10 order_head">
+        <h1>Place order</h1>
+        <p>Here you can see the list of dishes people participating in your event wants to eat. Once you are sure that every item is really available set approximate delivery time and click save.</p>
+        <p>If for some reason dish can not be ordered tick the checkbox and it will not be included in the debt list.</p>
+    </div>
+    <div class="col-md-offset-1 col-md-10">
         <div class="col-md-3" >
             <b>Event name:</b> <br>
             {{ event.title }}!
@@ -20,11 +27,9 @@
             <b>Ammount of people who ordered: </b>
             {{ people_count}}
         </div>
-
-
     </div>
 
-    <div class="col-md-12" style="outline: 1px solid lightgray;" >
+    <div class="col-md-offset-1 col-md-10" style="outline: 1px solid lightgray;" >
         <table class="table table-striped">
             <thead>
                 <tr>
@@ -49,32 +54,28 @@
 
     </div>
 
-    <div class="col-md-12" style="outline: 1px solid lightgray;">
+    <div class="col-md-offset-1 col-md-10">
         <div class="col-md-4 col-md-offset-4" style="margin-bottom: 10px;">
-            <h4>Approximately delivery time</h4>
-            <div >
-
-                    {{ form_widget(form.dueDate) }}
-
-                <br>
-                {{ form_widget(form.save, { 'attr': {'class': 'btn btn-success'} }) }}
-                <a href="{{ path('dashboard') }}" class="btn btn-default" role="button">Cancel</a>
+            <h5>Approximate delivery time</h5>
+            <div>
+                <div class="form-group">
+                    <div class="input-group" id="time_input">
+                        {{ form_widget(form.dueDate, { 'attr' : {'class' : 'form-control'}  }) }}
+                        <span class="input-group-addon">
+                           <i class="glyphicon glyphicon-calendar"></i>
+                       </span>
+                    </div>
+                </div>
+                <div>
+                    <a href="{{ path('dashboard') }}" class="btn btn-default col-md-5" role="button">Cancel</a>
+                    {{ form_widget(form.save, { 'attr': {'class': 'btn btn-success col-md-5 col-md-offset-2'} }) }}
+                </div>
                 {{ form_end(form) }}
             </div>
         </div>
     </div>
 
-    <script>
-
-        jQuery(document).ready(function() {
-            $(":checkbox").on("change", function() {
-                var that = this;
-                $(this).parent().parent().css("background-color", function() {
-                    return that.checked ? "#ff4d4d" : "";
-                });
-            });
-
-        });
-    </script>
-
-{% endblock event_content %}
+{% endblock body %}
+{% block javascripts %}
+    <script src="{{asset('bundles/event/js/order.js')}}" type="text/javascript"></script>
+{% endblock javascripts %}
