--- a/src/Corvus/EventBundle/Resources/views/Default/pick.html.twig
+++ b/src/Corvus/EventBundle/Resources/views/Default/pick.html.twig
@@ -1,16 +1,18 @@
-{% extends "EventBundle::layout.html.twig" %}
+{% extends '::base.html.twig'  %}
+{% block stylesheets %}
+    <link href="{{asset('bundles/event/css/pickFood.css')}}" type="text/css" rel="stylesheet">
+{% endblock stylesheets %}
+{% block body %}
 
-{% block event_content %}
-
-    Event name: {{ event_name }}!<br>
-    dealer {{ dealer }}<br>
-    <div class="col-md-8" style="outline: 1px solid lightgray;" >
-        <h3>Dish'es</h3>
+    <h1>Event: {{ event_name }}!</h1>
+    <h2>Food provider: {{ dealer }}</h2>
+    <div class="col-md-7 dish_list_wrapper">
+        <h3>Dishes</h3>
         <div>
             <ul class="list-group">
                 {% for dish in dishes %}
                     <li class="list-group-item">
-                        <div class="form-inline"  style="float: right;">
+                        <div class="form-inline dish_item">
                             <label>Amount:</label>
                             <input class="form-control" type="number" name="quantity" min="1" max="100" value="1">
                             <button class="btn btn-default add-dish" data-id="{{ dish.id }}">Add</button>
@@ -18,7 +20,7 @@
                         <h4 class="dish_name" name="dish_name">{{ dish.name }}</h4>
 
                         <p class="dish_description">{{ dish.description }}</p>
-                        Price: <p class="price" style="display: inline">{{ dish.price }}</p> €
+                        Price: <p class="price">{{ dish.price }}</p> €
 
 
                     </li>
@@ -28,7 +30,7 @@
         </div>
     </div>
 
-    <div class="col-md-4" style="outline: 1px solid lightgray; min-height: 200px; padding-bottom: 10px" >
+    <div class="col-md-4 cart_wrapper">
         <h3>Your Cart</h3>
         {{ form_start(form) }}
 
@@ -46,8 +48,8 @@
                     {{ form_widget(order.quantity, {'type': 'hidden'}) }}
 
                     <b>{{ order.vars.value.dish.name }}</b><br>
-                    Amount: <span>{{ order.vars.value.quantity }}</span>   <button class="plus btn btn-default btn-xs">+</button><button class="minus btn btn-default btn-xs">-</button><br>
-                    Price: <p class="price" style="display: inline">{{ order.vars.value.quantity * order.vars.value.pricePerUnit }}</p> €<br>
+                    Amount:<button class="minus btn btn-default btn-xs">-</button>  <span>{{ order.vars.value.quantity }}</span>   <button class="plus btn btn-default btn-xs">+</button><br>
+                    Price: <p class="price">{{ order.vars.value.quantity * order.vars.value.pricePerUnit }}</p> €<br>
 
                 </li>
             {% endfor %}
@@ -56,136 +58,7 @@
         {{ form_widget(form.save, { 'attr': {'class': 'btn btn-success btn-block'} }) }}
         {{ form_end(form) }}
     </div>
-
-    <script>
-        var $collectionHolder;
-
-        // setup an "add order" link
-        var $newLinkLi = $('<li class="list-group-item" >Total:</li>');
-
-        jQuery(document).ready(function() {
-            $('button.plus').click(function(event){
-                event.preventDefault();
-                var $amount = parseFloat($(this).siblings("span").text())
-                if($amount<100) {
-                    var $price = parseFloat($(this).siblings(".price").text())
-
-                    var $pricePerOne = $price / $amount;
-
-                    $(this).siblings(".price").text(($price + $pricePerOne).toFixed(2));
-                    $(this).siblings("span").text($amount + 1);
-                    $(this).siblings("input").eq(1).val($amount+1);
-                }
-                calculateTotalPrice();
-            });
-
-            $('button.minus').click(function(event){
-                event.preventDefault();
-                var $amount = parseFloat($(this).siblings("span").text())
-
-                if($amount>1){
-                    var $price = parseFloat($(this).siblings(".price").text())
-                    var $pricePerOne = $price / $amount;
-                    $(this).siblings(".price").text(($price - $pricePerOne).toFixed(2));
-                    $(this).siblings("span").text($amount - 1);
-                    $(this).siblings("input").eq(1).val($amount-1);
-                }
-                calculateTotalPrice();
-            });
-            // Get the ul that holds the collection of orders
-            $collectionHolder = $('ul.orders');
-            calculateTotalPrice();
-            // add a delete link to all of the existing orders form li elements
-            $collectionHolder.find('li').each(function() {
-                addOrderFormDeleteLink($(this));
-            });
-
-            // add the "add order" anchor and li to the tags ul
-            $collectionHolder.append($newLinkLi);
-
-            // count the current form inputs we have (e.g. 2), use that as the new
-            // index when inserting a new item (e.g. 2)
-            $collectionHolder.data('index', $collectionHolder.find(':input').length);
-
-            $('.add-dish').on('click', function(e) {
-                var $dish_id = $(this).attr('data-id');
-                var $existing_dih_on_cart = false;
-                $collectionHolder.find('li').each(function () {
-                    var $input_val = $(this).find("input").val();
-
-                    if ($input_val == $dish_id) {
-                        $existing_dih_on_cart = true;
-                    }
-                });
-
-                if ($existing_dih_on_cart == false) {
-                    var $amount = $(this).siblings("input[name='quantity']").first().val();
-
-                    if ($amount > 0 && $amount < 1000) {
-                        var $parent = $(this).parent();
-                        var $dish_name = $parent.siblings(".dish_name").text();
-                        var $price = parseFloat($parent.siblings(".price").text());
-
-                        // add a new tag form (see next code block)
-                        addOrderForm($collectionHolder, $newLinkLi, $dish_id, $amount, $dish_name, $price);
-                    }
-                }
-                calculateTotalPrice();
-            });
-        });
-
-        function addOrderForm($collectionHolder, $newLinkLi, $dish_id, $amount, $dish_name, $price ) {
-            // Get the data-prototype explained earlier
-            var prototype = $collectionHolder.data('prototype');
-
-            // get the new index
-            var index = $collectionHolder.data('index');
-
-            // Replace '__name__' in the prototype's HTML to
-            // instead be a number based on how many items we have
-            var newForm = prototype
-                            .replace(/__name__/g, index)
-                            .replace(/__idvalue__/g, $dish_id)
-                            .replace(/__qvalue__/g, $amount)
-                    +"<b>" +  $dish_name + "</b> <br> Amount: <span>"
-                    + $amount
-                    + "</span>   <button class='plus btn btn-default btn-xs'>+</button><button class='minus btn btn-default btn-xs'>-</button> <br> Price: <p class='price' style='display: inline'>"+
-                    ($price*$amount).toFixed(2) +"</p> €";
-
-            // increase the index with one for the next item
-            $collectionHolder.data('index', index + 1);
-
-            // Display the form in the page in an li, before the "Add a tag" link li
-            var $newFormLi = $('<li class="list-group-item" ></li>').append(newForm);
-            $newLinkLi.before($newFormLi);
-
-            // add a delete link to the new form
-            addOrderFormDeleteLink($newFormLi);
-        }
-
-        function addOrderFormDeleteLink($tagFormLi) {
-            var $removeFormA = $('<button class="btn btn-danger" style="float:right;">-</button>');
-            $tagFormLi.prepend($removeFormA);
-
-            $removeFormA.on('click', function(e) {
-                // prevent the link from creating a "#" on the URL
-                e.preventDefault();
-
-                // remove the li for the tag form
-                $tagFormLi.remove();
-                calculateTotalPrice();
-            });
-        }
-
-        function calculateTotalPrice(){
-            var $sum  = 0;
-            $collectionHolder = $('ul.orders');
-            $collectionHolder.find('li').each(function () {
-                var $price_val = parseFloat($(this).find(".price").first().text());
-                if(!isNaN($price_val))
-                    $sum += $price_val;
-            });
-            $newLinkLi.text("Total: " + $sum.toFixed(2) + " €");
-        }
-    </script>
-{% endblock event_content %}
+{% endblock body %}
+{% block javascripts %}
+    <script src="{{asset('bundles/event/js/pickFood.js')}}" type="text/javascript"></script>
+{% endblock %}
