--- a/src/Corvus/EventBundle/Resources/views/Default/review.html.twig
+++ b/src/Corvus/EventBundle/Resources/views/Default/review.html.twig
@@ -1,9 +1,4 @@
-{% extends "::base.html.twig" %}
-
-{% block stylesheets %}
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css" rel="stylesheet" type="text/css"/>
-{% endblock stylesheets %}
+{% extends '::base.html.twig'  %}
 
 {% block body %}
     <div class="container">
