--- a/src/Corvus/EventBundle/Resources/views/Default/createEvent.html.twig
+++ b/src/Corvus/EventBundle/Resources/views/Default/createEvent.html.twig
@@ -8,7 +8,7 @@
         {# render the task's only field: description #}
         <div class="form-group">
             {{ form_label(form.title) }}
-            {{ form_errors(form.dealer) }}
+            {{ form_errors(form.title) }}
             {{ form_widget(form.title, { 'attr' : { 'class' : 'form-control'}  }) }}
         </div>
         <div class="form-group">
