--- a/src/Corvus/UserBundle/Resources/views/ChangePassword/changePassword.html.twig
+++ b/src/Corvus/UserBundle/Resources/views/ChangePassword/changePassword.html.twig
@@ -1,5 +1,5 @@
-{% extends "CorvusMainBundle::layout.html.twig" %}
+{% extends '::base.html.twig'  %}
 
-{% block fos_user_content %}
+{% block body %}
 {% include "CorvusUserBundle:ChangePassword:changePassword_content.html.twig" %}
-{% endblock fos_user_content %}
+{% endblock body %}
