--- a/src/Corvus/UserBundle/Resources/views/ChangePassword/changePassword_content.html.twig
+++ b/src/Corvus/UserBundle/Resources/views/ChangePassword/changePassword_content.html.twig
@@ -1,11 +1,30 @@
 {% trans_default_domain 'FOSUserBundle' %}
-<div class="container" style="padding: 5px;">
-    <a class="btn btn-default" href="{{ path('fos_user_profile_show') }}">Your profile</a>
-    <a class="btn btn-default" href="{{ path('dashboard') }}">Dashboard</a>
+<div class="col-md-4 col-md-offset-4">
+    <form action="{{ path('fos_user_change_password') }}" {{ form_enctype(form) }} method="POST" class="fos_user_change_password">
+        {{ form_start(form, { 'attr' : {'class' : 'create_event_form'}}) }}
+        <div class="form-group">
+            {{ form_label(form.current_password) }}
+            {{ form_errors(form.current_password) }}
+            {{ form_widget(form.current_password, { 'attr' : { 'class' : 'form-control'}  }) }}
+        </div>
+        <div class="form-group">
+            {{ form_label(form.plainPassword.first) }}
+            {{ form_errors(form.plainPassword.first) }}
+            {{ form_widget(form.plainPassword.first, { 'attr' : { 'class' : 'form-control'}  }) }}
+        </div>
+        <div class="form-group">
+            {{ form_label(form.plainPassword.second) }}
+            {{ form_errors(form.plainPassword.second) }}
+            {{ form_widget(form.plainPassword.second, { 'attr' : { 'class' : 'form-control'}  }) }}
+        </div>
+        {{ form_end(form)}}
+        <div class="col-md-4">
+            <a class="btn btn-default pull-left" href="{{ path('fos_user_profile_show') }}">Cancel</a>
+        </div>
+        <div class="col-md-6">
+            <input class="btn btn-default" type="submit" value="{{ 'change_password.submit'|trans }}" />
+        </div>
+
+    </form>
 </div>
-<form action="{{ path('fos_user_change_password') }}" {{ form_enctype(form) }} method="POST" class="fos_user_change_password">
-    {{ form_widget(form) }}
-    <div>
-        <input class="btn btn-default" type="submit" value="{{ 'change_password.submit'|trans }}" />
-    </div>
-</form>
+
