--- a/src/Corvus/EventBundle/Resources/public/css/review.css
+++ b/src/Corvus/EventBundle/Resources/public/css/review.css
@@ -5,3 +5,8 @@
 .review_head{
     border-bottom:1px solid lightgray;
 }
+.review_group{
+    border: 1px solid lightgray;
+    margin: 5px 0;
+    padding: 0 20px;
+}
