--- a/src/Corvus/EventBundle/Resources/views/Emails/eventSuspend.html.twig
+++ b/src/Corvus/EventBundle/Resources/views/Emails/eventSuspend.html.twig
@@ -2,7 +2,7 @@
 
 Hello, {{ name }}<br>
 
-Event {{ event.title }} has been suspended.<br><br>
+Event "{{ event.title }}" has been suspended.<br><br>
 
 Vizit our page: <a href="{{ url('login') }}">CorvusFood</a>.<br><br>
 
