--- a/src/Corvus/EventBundle/Resources/views/Emails/foodOrdered/foodOrdered.html.twig
+++ b/src/Corvus/EventBundle/Resources/views/Emails/foodOrdered/foodOrdered.html.twig
@@ -1,9 +1,9 @@
 
-<h3>Food, for {{ event.title }} event has been ordered</h3>
+<h3>Food, for "{{ event.title }}" event has been ordered</h3>
 
 Hello, {{ name }}<br><br>
 
-We want to announce, that food for {{ event.title }} has been ordered<br><br>
+We want to announce, that food for "{{ event.title }}" has been ordered<br><br>
 Your order:<br>
 <ul>
     {% for order in orders %}
