--- a/src/Corvus/EventBundle/Resources/views/Emails/timeout.html.twig
+++ b/src/Corvus/EventBundle/Resources/views/Emails/timeout.html.twig
@@ -1,13 +1,13 @@
 
-<h3>{{ event.title }} Has ended</h3>
+<h3>"{{ event.title }}" Has ended</h3>
 
 Hello, {{ name }}<br><br>
 
-We want to remind, that event {{ event.title }} picking food time has ended.<br><br>
+We want to remind, that event "{{ event.title }}" picking food time has ended.<br><br>
 
 Please place orders, that everbody, who participates in event, could get food while it's hot :)<br><br>
 
-To login, go to: <a href="{{ url('corvus_main_default_index') }}">Login</a>.<br><br>
+To login, go to: <a href="http://vilnius1.projektai.nfqakademija.lt">Login</a>.<br><br>
 
 Thanks!<br>
 
