--- a/src/Corvus/EventBundle/Resources/views/Emails/inviteuser.html.twig
+++ b/src/Corvus/EventBundle/Resources/views/Emails/inviteuser.html.twig
@@ -3,7 +3,7 @@
 
 Hello, {{ name }}<br><br>
 
-You have been invited by {{ event.host.username }} to participate in {{ event.title }} event.<br><br>
+You have been invited by {{ event.host.username }} to participate in "{{ event.title }}" event.<br><br>
 
 Go to website, pick your food and save a lot of time.<br>
 <br>
