fix email template

--- a/src/Corvus/EventBundle/Resources/views/Emails/timeout.html.twig
+++ b/src/Corvus/EventBundle/Resources/views/Emails/timeout.html.twig
@@ -3,7 +3,7 @@
 
 Hello, {{ name }}<br><br>
 
-We want to remind you, that food picking time for event "{{ event.name }}" has ended.<br><br>
+We want to remind you, that food picking time for event "{{ event.title }}" has ended.<br><br>
 
 Please place orders, that everbody, who participates in event, could get food while it's hot. :)<br><br>
 
