--- a/src/Corvus/DashboardBundle/Resources/views/Default/macros.html.twig
+++ b/src/Corvus/DashboardBundle/Resources/views/Default/macros.html.twig
@@ -71,7 +71,7 @@
                             </div>
                             <div class="col-md-5 buttons">
                                 <div class="col-md-6">
-                                    {{ buttons.pick(event.id, 'btn btn-default') }}
+                                    {{ buttons.place(event.id, 'btn btn-default') }}
                                 </div>
                                 <div class="dropdown col-md-6">
                                     <button class="btn btn-default dropdown-toggle col-md-12" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
