--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -6,6 +6,7 @@
         <title>{% block title %}Corvus Food{% endblock %}</title>
         <link rel="icon" type="image/x-icon" href="{{ asset('favicon.ico') }}" />
         <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css" rel="stylesheet" type="text/css"/>
+        <link href="{{asset('bundles/event/plugins/css/bootstrap-datetimepicker.min.css')}}" rel="stylesheet" type="text/css"/>
         {% block stylesheets %}{% endblock %}
 
     </head>
