--- a/src/Corvus/EventBundle/Resources/public/css/review.css
+++ b/src/Corvus/EventBundle/Resources/public/css/review.css
@@ -1,6 +1,7 @@
 .dish_list .dish div{
     background-color: lightgray;
     margin-bottom: 10px;
+    padding: 5px 0;
 }
 .review_head{
     border-bottom:1px solid lightgray;
