Edit text in place order page.

--- a/src/Corvus/EventBundle/Resources/views/Default/order.html.twig
+++ b/src/Corvus/EventBundle/Resources/views/Default/order.html.twig
@@ -11,7 +11,7 @@
     <div class="col-md-offset-1 col-md-10 event_info">
         <div class="col-md-4" >
             <b>Event name:</b> <br>
-            {{ event.title }}!
+            {{ event.title }}
         </div>
 
         <div class="col-md-4" >
@@ -31,7 +31,7 @@
             {{ dealer.address }}
         </div>
         <div class="col-md-4" >
-            <b>Dealer address:</b> <br>
+            <b>Dealer phone number:</b> <br>
             {{ dealer.phone }}
         </div>
     </div>
